Bug 357225 - Quick extract menu is not updated
Summary: Quick extract menu is not updated
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-12-27 18:22 UTC by Elvis Angelaccio
Modified: 2016-03-10 17:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-12-27 18:22:11 UTC
This is a regression introduced by the KF5 port, since apparently Ark 15.04 is the last version where the "quick extract menu" does work.

Reproducible: Always

Steps to Reproduce:
1. Extract an archive in a directory foo
2.
3.

Actual Results:  
Directory foo is not added to the history in the Extract button -> submenu

Expected Results:  
Directory foo is added to the history in the Extract button -> submenu
Comment 1 Elvis Angelaccio 2016-01-13 15:45:28 UTC
It looks like the regression is caused by the ExtractionDialog not being anymore a subclass of KDirSelectDialog, which had the code to automagically save URLs under the "DirSelect Dialog" config group. Possible solutions:

1. Implement our own logic to save destination directories in our own arkrc config file (while the previous method stored them in ~/.config/kdeglobalsrc)
2. Bring back -if possible- KDirSelectDialog, which is currently in the frameworkintegration repo
Comment 2 Elvis Angelaccio 2016-03-10 17:57:18 UTC
Git commit 0dbbf028c665e775601328b3f0cdbd9c0fcd1e94 by Elvis Angelaccio, on behalf of Chantara Tith.
Committed on 10/03/2016 at 17:52.
Pushed by elvisangelaccio into branch 'Applications/15.12'.

Bring back the quick-extract menu

We now save each destination folder in our own arkrc configuration file.
FIXED-IN: 15.12.3

Differential Revision: D1095

M  +13   -1    kerfuffle/extractiondialog.cpp
M  +2    -2    part/part.cpp

http://commits.kde.org/ark/0dbbf028c665e775601328b3f0cdbd9c0fcd1e94