Bring back the quick-extract menu

We now save each destination folder in our own arkrc configuration file.

BUG: 357225
FIXED-IN: 15.12.3

Differential Revision: D1095